@@ -17,8 +17,11 @@ def create_publisher():
 def setup():                            # stuff that should be run once.
 	html.init_templates()
 
-	dirname, filename = os.path.split(os.path.abspath(__file__))
+	dirname = os.path.dirname(__file__)
+	dirname = os.path.join(dirname,"imageapp")
+	
 	path = os.path.join(dirname,'dice.png')
+
 	some_data = open(path, 'rb').read()
 	image.add_image(some_data)
     
