@@ -3,13 +3,14 @@
 images = {}
 
 def add_image(data):
-    if images:
-        image_num = max(images.keys()) + 1
-    else:
-        image_num = 0
-        
-    images[image_num] = data
-    return image_num
+	if images:
+		image_num = max(images.keys()) + 1
+	else:
+		image_num = 0
+		
+	images[image_num] = data
+	print "Stored image",image_num
+	return image_num
 
 def get_image(num):
     return images[num]
