@@ -1,11 +1,10 @@
 #!/usr/bin/env python
 
-#This is directly ripped from github.com/MaxwellGBrown
-
+import argparse
 import sys
 import random
 import socket
-import time
+from time import gmtime, strftime
 from urlparse import urlparse, parse_qs
 
 ## for the new POST request handling
@@ -17,21 +16,83 @@ import jinja2
 import os
 
 ## for the wsgi app
-from app import make_app## other apps#import quixote
-#from quixote.demo.altdemo import create_publisher #login demo#import imageapp #image application
+import app## other appsimport quixote
+from quixote.demo.altdemo import create_publisher #login demoimport imageapp
 from wsgiref.validate import validator
 
-if(False):
-	def make_app():
-		return make_image_app()
+#### GLOBALS ####
+# Setup should only one once in choose_app
+_setup_complete = False
 
-		"""_quixote_app = Nonedef make_quixote_app():	global _quixote_app		if(_quixote_app is None):		p = create_publisher()		_quixote_app = quixote.get_wsgi_app()			return _quixote_app	"""_image_app = Nonedef make_image_app():	global _image_app			if(_image_app is None):		imageapp.setup()		p = imageapp.create_publisher()		_image_app = quixote.get_wsgi_app()			return _image_app	
+# Names of my apps that can be typed in
+# to the command line
+APP_QUIXOTE_ALTDEMO = "altdemo"
+APP_QUIXOTE_IMAGEAPP = "image"
+APP_MINE = "myapp"
+
+# This list is used to check if an invalid 
+# app was chosen.
+APPS = [
+	APP_QUIXOTE_ALTDEMO
+	,APP_QUIXOTE_IMAGEAPP 
+	,APP_MINE
+]
+#### END GLOBALS ####
+
+
+parser = argparse.ArgumentParser(description='this is the beans!')
+parser.add_argument('-A' \
+	, metavar='application' \
+	, nargs = '?' \
+	, default = APP_MINE
+	,help='What application should be run on this server.')
+parser.add_argument('-p', metavar='port' \
+	, nargs='?'
+	, default=random.randint(8000,9999) \
+	, type=int
+	, help='What port the server should run on')
+
+args = parser.parse_args()
+
+
+# Accepts one of the above three strings
+def choose_app(app_name):
+	global _setup_complete 
+	
+	if(app_name == APP_MINE):
+		return app.make_app()
+	elif(app_name == APP_QUIXOTE_ALTDEMO):
+		if not _setup_complete:
+			p = create_publisher()
+			_setup_complete = True
+		return quixote.get_wsgi_app()
+	elif(app_name == APP_QUIXOTE_IMAGEAPP):
+		if not _setup_complete:
+			imageapp.setup()
+			p = imageapp.create_publisher()
+			_setup_complete = True
+		return quixote.get_wsgi_app()
+
+def print_request_info(environ, conn):
+	print "------------------"
+	print "[" + environ['SELECTED_APP'] + "]", \
+		strftime("%Y-%m-%d %H:%M:%S", gmtime()), \
+		conn.getpeername(), \
+		environ['REQUEST_METHOD'], \
+		"-", \
+		environ['PATH_INFO'] 
+def print_response_info(status, headers):
+	print '\tStatus',status
+	print '\tHeaders',headers
+	
 ##
 ## HANDLE CONNECTION DEFINITION
 ##
-def handle_connection(conn, environ):
+def handle_connection(conn, environ, selected_app = APP_MINE):
 
-
+	# for print_request
+	environ['SELECTED_APP'] = selected_app
+	
 	# Start reading in data from the connection
 	read = conn.recv(1)
 	while read[-4:] != '\r\n\r\n':
@@ -40,21 +101,16 @@ def handle_connection(conn, environ):
 	# Parse headers
 	request, data = read.split('\r\n',1)
 
-	print "Read Data:",read
-	
 	headers = {}
 	for line in data.split('\r\n')[:-2]:
 		k, v = line.split(': ',1)
 		headers[k.lower()] = v
 
 	# parse path and query string as urlparse object
-	# parsed_url[2] = path, parsed_url[4] = query string
-	print "beans"
 	parsed_url = urlparse(request.split(' ', )[1])
 
 	environ['PATH_INFO'] = parsed_url[2]
 	environ['QUERY_STRING'] = parsed_url[4]
-
 	# Handle reading of POST data
 	content = ''
 	
@@ -62,37 +118,34 @@ def handle_connection(conn, environ):
 		environ['REQUEST_METHOD'] = 'POST'
 		environ['CONTENT_LENGTH'] = headers['content-length']
 		environ['CONTENT_TYPE'] = headers['content-type']
-		print "this is the beans"
 		contentLength = int(environ['CONTENT_LENGTH'])	
-		content = conn.recv(contentLength)
-		print "length of content:",contentLength
-		#print "Content:",content
+		
+		while len(content) < contentLength:
+			received_content = conn.recv(contentLength)
+			content += received_content
 	else:
 		environ['REQUEST_METHOD'] = 'GET'
-		environ['CONTENT_LENGTH'] = 0	if('cookie' in headers):		environ['HTTP_COOKIE'] = headers['cookie']
+		environ['CONTENT_LENGTH'] = 0	if('cookie' in headers):		environ['HTTP_COOKIE'] = headers['cookie']
 
 	#this is required by WSGI standards				  
 	environ['CONTENT_LENGTH'] = str(environ['CONTENT_LENGTH']) 
 
 	environ['wsgi.input'] = StringIO(content)
-
-	print "this is the beans knees"
-
+	
 	def start_response(status, response_headers):
+		print_response_info(status, response_headers)
 		conn.send('HTTP/1.0 %s\r\n' % status)
 		for header in response_headers:
 			conn.send('%s: %s\r\n' % header)
 		conn.send('\r\n')
 
-	# make the app	application = make_app()	
+	print_request_info(environ, conn)
+	# make the app	application = choose_app(selected_app)	
 	response_html = application(environ, start_response)
 	for html in response_html:
 		conn.send(html)
-	
-	print "this is the beans knees for real"
-	# close the connection
-	conn.close()
 
+	conn.close()
 
 def get_server_environ(port = 9999, server_name = "localhost"):
 	environ = {}
@@ -109,31 +162,41 @@ def get_server_environ(port = 9999, server_name = "localhost"):
 	
 	return environ
 
-
 ##
 ## MAIN FUNCTION DEFINITION
 ##
 
 def main(socket_module = socket):
 	s = socket_module.socket()         # Create a socket object
-	host = socket_module.getfqdn() #"localhost" # Changed to localhost because my machine throws exceptions at getfqdn for some reason
-	port = random.randint(8000, 9999)
+	host = "localhost"#socket_module.getfqdn() 
+	# Changed to localhost because my machine throws 
+	# exceptions at getfqdn for some reason
+	
+	### PROGRAM ARGUMENTS ###
+	port = args.p 
+	selected_app = args.A
+	###
+	
+	if selected_app not in APPS:
+		print "Selected app was not valid:",selected_app
+		exit()
+	
 	s.bind((host, port))        # Bind to the port
 	print 'Starting server on', host, port
 	print 'The Web server URL for this would be http://%s:%d/' % (host, port)
 	s.listen(5)                 # Now wait for client connection.
 	print 'Entering infinite loop; hit CTRL-C to exit'
+
 	
-	# Some initial information about the server
-	
-	environ = get_server_environ(port, host)
+	print "Using application", selected_app
 	
 	while True:
+		# Some initial information about the server
+		environ = get_server_environ(port, host)
 		# Establish connection with client.
 		c, (client_host, client_port) = s.accept()
-		print 'Got connection from', client_host, client_port
 		# handle connection to serve page
-		handle_connection(c, environ)
+		handle_connection(c, environ, selected_app)
 
 
 ##
